--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -18,3 +18,40 @@ body {
     top: 50%;
     transform: translate(-50%, -50%);
 }
+
+.title-box {
+    height: 60px;
+    background: url('../images/login_title.png') no-repeat center;
+}
+
+.reg-box {
+
+    display: none;
+}
+
+.layui-form {
+    padding: 0 30px;
+}
+
+.links {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.links a {
+    font-size: 12px;
+}
+
+.layui-form-item {
+    position: relative;
+}
+
+.layui-icon {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+.layui-form-item .layui-input {
+    padding-left: 32px;
+}
